Orpie ChangeLog
------------------------------------------------------------------------

v1.5

   2007-09-13        Version 1.5.0 release.

   2007-07-01        Complete rewrite of units implementation, allowing
                     user-defined units and physical constants.

   2007-05-06        Updated included ocamlgsl bindings to 0.6.0.

   2006-11-13        Square root of a negative value now returns a
                     complex result.

   2006-11-12        gcd(), lcd(), and mod() now accept real-valued 
                     arguments.
   
                     Fix for crash in abbrev mode.

   2004-09-09        Made a minor Makefile change to correct linking
                     errors under Gentoo (maybe others).

                     Numerous code cleanups.  Calculator code has
                     been better separated from interface code.

   2004-09-07        Support --sysconfdir configure option.  (Anyone
                     packaging for the filesystem hierarchy standard
                     will now need to use something like "./configure
                     --prefix=/usr --sysconfdir=/etc".)

   2004-09-03        Implemented entry of most fundamental physical 
                     constants.

   2004-08-31        Fixed incorrect error message regarding deprecated
                     extended_enter command.

v1.4

   2005-10-29        Version 1.4.3 release.

                     Backported a bugfix for crash when executing
                     uconvert() with only one element on the stack.

   2005-09-21        Version 1.4.2 release.

   2005-09-20        Updated build script for better support on
                     FreeBSD and OS X.

   2004-09-17        Version 1.4.1 release.

   2004-09-15        Updated the build dependency tree, so parallel
                     make should work properly again.

   2004-09-09        Made a minor Makefile change to correct linking
                     errors under Gentoo (maybe others).
